# vitaly

./: Cargo.toml  LICENSE.txt  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: commands.rs  common.rs  keycodes.rs  keymap.rs  main.rs  protocol.rs  via_meta_refs.json
src/commands/: altrepeats.rs  bootload.rs  combos.rs  devices.rs  encoders.rs  keyoverrides.rs  keys.rs  layers.rs  layout.rs  load.rs  lock.rs  macros.rs  rgb.rs  save.rs  settings.rs  tapdances.rs  tester.rs
src/keycodes/: v5.rs  v6.rs
src/keycodes/v5/: name_to_code.rs
src/keycodes/v6/: name_to_code.rs
src/keymap/: buffer.rs
src/protocol/: alt_repeat.rs  combo.rs  encoder.rs  key_override.rs  layout.rs  macro.rs  qmk_settings.rs  rgb.rs  tap_dance.rs
tools/: build_via_refs.py
