[package]
name = "vitaly"
version = "0.1.13"
edition = "2024"
description = "VIA/Vial API client and cli tool for guiless keyboard configuration."
license = "MIT"
homepage = "https://github.com/bskaplou/vitaly"
documentation = "https://github.com/bskaplou/vitaly"
repository = "https://github.com/bskaplou/vitaly"
readme = "README.md"
keywords = ["qmk", "via", "vial", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
argh = "0.1.13"
hidapi = "2.6.3"
palette = "0.7.6"
rust-lzma = "0.6.0"
serde_json = "1.0.145"
thiserror = "2.0.17"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
